--- a/ain/frontend/src/components/navbar/navbar.scss
+++ b/ain/frontend/src/components/navbar/navbar.scss
@@ -1,11 +1,3 @@
-.sidenav-container {
-  width: 240px;
-  margin-right: 10px;
-
-  .header {
-    padding: 20px;
-    font-size: 16px;
-    background-color: #acadad;
-    color: " #fff";
-  }
+.sidenav-container .rs-header .rs-navbar{
+  background-color: #3c3f43;
 }
