Adding feature to select and show the selected files. Also adding a button to memorise the contents of the pdfs.

--- a/ain/frontend/src/App.css
+++ b/ain/frontend/src/App.css
@@ -1,8 +1,17 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   /* margin: 0 auto; */
   /* padding: 2rem; */
-  text-align: center;
+  /* text-align: center; */
+  min-height: 100vh;
+
+  .app {
+    min-height: 100vh;
+
+    .app-content {
+      min-height: 100%;
+    }
+  }
 }
 
 .logo {
